kubernetes/manifest_example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

# kubectl apply -f namespace.yaml : -f옵선으로 파일 지정
# kubectl get ns dev -o yaml : dev ns yaml형식으로 확인
