kubernetes/manifest_example/env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-env
spec:
  containers:
    - name: nginx-env
      image: nginx
      ports:
        - containerPort: 8080
