kubernetes/manifest_example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labbels:
    run: nginx2
  name: nginx2
spec:
  containers:
  - image: nginx
    name: nginx2
    resources: {}
  dnsPilicy: ClusterFirst
  restartPolicy: Always
status: {}
